--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,7 +1,30 @@
 <footer>
   <div class="footer-inner">
-    주소: 서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>
-    Tel.02-6423-7000 ~ 7004 | Fax.02-6423-7005 | E-mail. sechantec@sechantec.co.kr<br/>
-    Copyright &copy; 2023 - SC Technology.co.,Ltd  All rights reserved.
+    <p>
+      주소: 서울 금천구 서부샛길 606 에이동 17층 1711-1호 / 서울 금천구 가산동 543-1<br>
+      Tel. 02-6423-7000 ~ 7004 | Fax. 02-6423-7005 | 
+      E-mail. <a href="mailto:sechantec@sechantec.co.kr">sechantec@sechantec.co.kr</a>
+    </p>
+
+    <!-- ✅ 내부 링크 강화 영역 -->
+    <nav class="footer-nav" aria-label="하단 주요 메뉴">
+      <ul>
+        <li><a href="/index.html">메인</a></li>
+        <li><a href="/about.html">회사소개</a></li>
+        <li><a href="/about-ideology.html">이념</a></li>
+        <li><a href="/about-vision.html">VISION</a></li>
+        <li><a href="/about-history.html">연혁</a></li>
+        <li><a href="/about-partners.html">파트너</a></li>
+        <li><a href="/about-location.html">오시는 길</a></li>
+        <li><a href="/services.html">서비스</a></li>
+        <li><a href="/product.html">PRODUCT</a></li>
+        <li><a href="/news.html">공지</a></li>
+        <li><a href="/contact.html">문의하기</a></li>
+      </ul>
+    </nav>
+
+    <p>
+      Copyright &copy; 2023 - SC Technology.co.,Ltd All rights reserved.
+    </p>
   </div>
 </footer>
