--- a/partials/header.html
+++ b/partials/header.html
@@ -6,7 +6,7 @@
     </button>
     <nav id="primary-nav" class="primary">
       <ul>
-        <li><a href="/index.html">메인</a></li>
+        <li><a href="/">메인</a></li>
         <li>
           <a href="/about.html">회사소개</a>
           <ul class="submenu">
@@ -34,4 +34,5 @@
       </ul>
     </nav>
   </div>
+
 </header>
