--- a/partials/footer.html
+++ b/partials/footer.html
@@ -9,7 +9,7 @@
     <!-- ✅ 내부 링크 강화 영역 -->
     <nav class="footer-nav" aria-label="하단 주요 메뉴">
       <ul>
-        <li><a href="/index.html">메인</a></li>
+        <li><a href="/">메인</a></li>
         <li><a href="/about.html">회사소개</a></li>
         <li><a href="/about-ideology.html">이념</a></li>
         <li><a href="/about-vision.html">VISION</a></li>
@@ -28,3 +28,4 @@
     </p>
   </div>
 </footer>
+
