--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,14 +1,11 @@
 <footer>
   <div class="footer-inner">
     <p>
-      주소: 서울 금천구 서부샛길 606 A동 17층 1711-1호 
-      <span class="br-mobile"><br></span>
-      금천구 가산동 543-1
-      <span class="br-mobile"><br></span>
-      Tel. 02-6423-7000 ~ 7004 / Fax. 02-6423-7005
-      <span class="br-mobile"><br></span>
+      주소: 서울 금천구 서부샛길 606 A동 17층 1711-1호 / 금천구 가산동 543-1
+      <span class="br-pc"><br></span>
+      Tel. 02-6423-7000 ~ 7004 / Fax. 02-6423-7005 / 
       E-mail. <a href="mailto:sechantec@sechantec.co.kr">sechantec@sechantec.co.kr</a>
-      <span class="br-mobile"><br></span>
+      <span class="br-pc"><br></span>
       Copyright © 2023 - SC Technology.co.,Ltd All rights reserved.
     </p>
   </div>
