--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,13 +1,22 @@
 <footer>
   <div class="footer-inner">
-    <p>
-      주소: 서울 금천구 서부샛길 606 A동 17층 1711-1호 / 금천구 가산동 543-1
-      <span class="br-pc"><br></span>
+
+    <!-- ✅ PC 전용 -->
+    <div class="footer-pc">
+      주소: 서울 금천구 서부샛길 606 A동 17층 1711-1호 / 금천구 가산동 543-1 <br>
       Tel. 02-6423-7000 ~ 7004 / Fax. 02-6423-7005 / 
-      E-mail. <a href="mailto:sechantec@sechantec.co.kr">sechantec@sechantec.co.kr</a>
-      <span class="br-pc"><br></span>
+      E-mail. <a href="mailto:sechantec@sechantec.co.kr">sechantec@sechantec.co.kr</a><br>
       Copyright © 2023 - SC Technology.co.,Ltd All rights reserved.
-    </p>
+    </div>
+
+    <!-- ✅ 모바일 전용 -->
+    <div class="footer-mobile">
+      주소: 서울 금천구 서부샛길 606 A동 17층 1711-1호 <br>
+      금천구 가산동 543-1 <br>
+      Tel. 02-6423-7000 ~ 7004 / Fax. 02-6423-7005<br>
+      E-mail. sechantec@sechantec.co.kr</a><br>
+      Copyright © 2023 - SC Technology.co.,Ltd All rights reserved.
+    </div>
+
   </div>
 </footer>
-
